Fri Dec 26 14:45:39 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi, gawkinet.texi: Update to FDL 1.3.

Mon Dec  1 21:20:39 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi (File Checking): Correct the text at the end; getline
	isn't fatal, period, not related to POSIX.  Thanks to
	Seb <sbb@tuxfamily.org> for pointing this out.
	(Round-Function): Change initial return when equal to return ival,
	which lops off any digits, e.g. if given 121.0. Thanks to
	Timothy J. Stefanski <TJStefanski@magellanhealth.com>.

Fri Aug  1 17:34:55 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi (Signature Program): Added new subsection.

Thu Jul 31 21:38:08 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi (Variable Typing): Document that array elements created
	by `match' also get strnum attribute.

Mon Jun  2 22:47:08 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi (Control Letters): Add a note about %c only
	taking values from 0 to 255.
	(DOS Quoting): New node.

Thu Jan 31 16:17:27 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi, gawkinet.texi: Updated the Back-Cover text per
	latest from the FSF.

Fri Jan 25 12:13:39 2008  Dave Pitts         <dpitts@cozx.com>

	* gawk.texi (pwcat.c, grcat.c): Added ZOS_USS changes.

Mon Jan 14 05:30:16 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.texi: Add maintainer contact info for z/OS.

Mon Oct 22 08:49:05 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.6: Release tar file made.

Fri Oct 19 04:13:33 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* gawk.1: Add length(array) to list of extensions at end.
	Revise date.

Thu Oct 18 08:40:59 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* texinfo.tex: Updated to version from Texinfo 4.11.

Sun Oct 14 20:37:59 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* awkcard.in: Fix version numbers and copyright info, minor
	cleanups to format nicely.

Sun Sep 30 22:30:05 2007  Arnold D. Robbins  <arnold@skeeve.com>
