@@ -1,0 +1,1 @@
+4, -1, Is a directory
