@@ -1,3 +1,8 @@
+Mon Jan  5 22:53:26 2009  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* Makefile.am (getlndir): New test.
+	* getlndir.awk, getlndir.ok: New files.
+
 Mon Dec 29 22:46:10 2008  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* Makefile.am (mbprintf3): New test.
